# Sentinel-Q1

./: Cargo.toml  LICENSE  README.md  SETUP.md  build.ps1  build.rs  setup_target.ps1
cpp/: CMakeLists.txt
cpp/include/: core_ffi.h
cpp/src/: main.cpp
cpp/src/strategy_engine/: strategy_engine.cpp  strategy_engine.hpp
kernel/src/: ai_detector.rs  ai_models.rs  ffi.rs  lib.rs  main.rs  network_filter.rs  security.rs  voice_auth.rs
src/: ai_detector.rs  lib.rs  main.rs  network_filter.rs  security.rs  voice_auth.rs
src/core_engine/: data_listener.rs  ffi.rs  mod.rs  ring_buffer.rs
tests/: security_tests.rs
userspace/cli/: Cargo.toml
userspace/cli/src/: main.rs
