[package]
name = "sentinel-x"
version = "0.1.0"
edition = "2021"
description = "Sentinel-X - Öngörülü Biyometrik Savunma Kalkanı"
autobins = false
build = false

[lib]
name = "sentinel_x"
path = "src/lib.rs"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# Audio processing

# Machine Learning
ndarray = "0.15"

# Cryptography
blake3 = "1.5"

# Network processing
etherparse = "0.14"

# Async runtime
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"

# Math utilities

[features]
default = ["userspace"]
userspace = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true