[package]
name = "sentinel-cli"
version = "0.1.0"
edition = "2021"
description = "Sentinel-X Command Line Interface"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
colored = "2.0"
dialoguer = "0.10"
indicatif = "0.17"

[dependencies.sentinel-core]
path = "../core"
version = "0.1.0"